Remove some usage of Google ImmutableMap [HZ-4214] (#507)
GitOrigin-RevId: 57ff14cb9e1863d758abd5fd53b6c7cc0ffcba13