@@ -17,7 +17,6 @@
 package com.hazelcast.jet.sql.impl.connector.file;
 
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import com.hazelcast.jet.pipeline.file.FileFormat;
 import com.hazelcast.jet.sql.impl.connector.file.FileTable.FilePlanObjectKey;
 import com.hazelcast.sql.impl.schema.TableField;
@@ -26,6 +25,8 @@ import junitparams.JUnitParamsRunner;
 import junitparams.Parameters;
 import org.junit.Test;
 import org.junit.runner.RunWith;
+
+import java.util.Map;
 
 import static java.util.Collections.singletonList;
 import static java.util.Collections.singletonMap;
@@ -57,7 +58,7 @@ public class FileTableTest {
                 schema1,
                 name1,
                 ImmutableList.of(new TableField(field1, QueryDataType.INT, false)),
-                new ProcessorMetaSupplierProvider(ImmutableMap.of("key", "value"), format1)
+                new ProcessorMetaSupplierProvider(Map.of("key", "value"), format1)
         );
         FilePlanObjectKey k2 = new FilePlanObjectKey(
                 schema2,
